# graphics

./: Cargo.toml  README.md  rustfmt.toml
api/proto/: renderer.proto
api/wit/: node.wit
client/: Cargo.toml
client/src/: main.rs
engine/: Cargo.toml
fractal/: Cargo.toml
macros/: Cargo.toml
plugin/: Cargo.toml
plugin/src/: dispatcher.rs  lib.rs  manager.rs  node.rs
plugin/src/node/: buffer.rs
script/: Cargo.toml
script/src/: lib.rs
server/: Cargo.toml  build.rs
server/src/: dispatcher.rs  main.rs
server/src/dispatcher/: helloworld.rs  renderer.rs
stream/: Cargo.toml
